--- a/XtreamJson/src/main/resources/templates/fragments/movieCategoryPage.html
+++ b/XtreamJson/src/main/resources/templates/fragments/movieCategoryPage.html
@@ -29,7 +29,7 @@
       <!-- Movie Thumbnails Grid -->
       <div class="row">
         <div class="col-2 mb-2" th:each="movie : ${moviePage.content}">
-          <a th:href="@{/stream.html(url=${movie.directSource})}" style="text-decoration:none;color:inherit;">
+          <a th:href="@{/stream.html(url=${movie.directSource},title=${movie.name})}" style="text-decoration:none;color:inherit;">
             <div class="card h-100 clickable-movie-card">
               <img th:if="${movie.streamIcon != null and !#strings.isEmpty(movie.streamIcon)}"
                    th:src="${movie.streamIcon}"
