--- a/XtreamJson/src/main/resources/templates/fragments/searchResults.html
+++ b/XtreamJson/src/main/resources/templates/fragments/searchResults.html
@@ -6,7 +6,7 @@
         <div class="px-2 pt-1 pb-1 fw-bold text-success">Movies</div>
         <div class="d-flex flex-wrap">
             <div class="me-2 mb-2" th:each="movie : ${movies}" style="width: 160px;">
-                <a th:href="@{/stream.html(url=${movie.directSource})}" style="text-decoration:none;color:inherit;">
+                <a th:href="@{/stream.html(url=${movie.directSource},title=${movie.name})}" style="text-decoration:none;color:inherit;">
                     <div class="card" style="width:100%;">
                         <img th:if="${movie.streamIcon} != null" th:src="${movie.streamIcon}" class="card-img-top" style="height:90px;object-fit:cover;" alt="">
                         <div class="card-body p-2">
