--- a/XtreamJson/src/main/resources/templates/home.html
+++ b/XtreamJson/src/main/resources/templates/home.html
@@ -4,6 +4,7 @@
     <title>XtreamJson Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" th:href="@{/css/index.css}">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/htmx.org@1.9.10"></script>
     <style>
@@ -86,6 +87,7 @@
     <div id="movie-category-items"></div>
     <div id="providers-container"></div>
     <div id="admin-properties-container"></div>
+    <div id="epg-container"></div>
 
     <!-- Log Content Container -->
     <div id="home-log-content"></div>
