--- a/XtreamJson/src/main/resources/templates/fragments/movieCategoryPage.html
+++ b/XtreamJson/src/main/resources/templates/fragments/movieCategoryPage.html
@@ -32,7 +32,7 @@
           <a th:href="@{/stream.html(url=${movie.directSource},title=${movie.name})}" style="text-decoration:none;color:inherit;">
             <div class="card h-100 clickable-movie-card" th:attr="data-tmdb=${movie.tmdb}">
               <img th:if="${movie.streamIcon != null and !#strings.isEmpty(movie.streamIcon)}"
-                   th:src="${movie.streamIcon}"
+                   th:src="@{/proxy/image(url=${movie.streamIcon})}"
                    class="card-img-top" alt="Movie Thumbnail">
               <div class="card-body">
                 <h6 class="card-title" th:text="${movie.name}"></h6>
